docs and fixes
